k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-interview
  labels:
    name: devops-interview
    environment: dev
    project: devops-interview
