k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: devops-interview
  labels:
    app: backend-api
    environment: dev
    project: devops-interview
spec:
  selector:
    app: backend-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: 9090
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: devops-interview
  labels:
    app: frontend-app
    environment: dev
    project: devops-interview
spec:
  selector:
    app: frontend-app
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
